--- a/fyyd-api/Cargo.toml
+++ b/fyyd-api/Cargo.toml
@@ -12,7 +12,7 @@ homepage.workspace = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-fyyd-types = { path = "../fyyd-types/", version = "0.1.0" }
+fyyd-types = { version = "0.1.0" }
 reqwest = { version = "0.11.14", features = ["json", "blocking"] }
 serde = { version = "1.0.162", features = ["derive"] }
 serde_json = "1.0"
