chore: add description to fyyd-types

--- a/fyyd-types/Cargo.toml
+++ b/fyyd-types/Cargo.toml
@@ -2,6 +2,7 @@
 name = "fyyd-types"
 version = "0.1.0"
 licence = "MIT"
+description = "Types for the fyyd-api crate."
 authors.workspace = true
 edition.workspace = true
 readme.workspace = true
