--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,16 @@ repository = "https://gitlab.com/akenji/fyyd-api"
 documentation = "https://gitlab.com/akenji/fyyd-api"
 homepage = "https://gitlab.com/akenji/fyyd-api"
 
+keywords = [
+	"podcasting",
+	"api",
+	"podcast",
+	"search",
+	"fyyd",
+]
+
+categories = ["api-bindings", "multimedia::audio", "multimedia"]
+
 [workspace]
 members = [
 	"fyyd-api",
