--- a/fyyd-api/Cargo.toml
+++ b/fyyd-api/Cargo.toml
@@ -19,3 +19,7 @@ fyyd-types = { version = "0.1.0" }
 reqwest = { version = "0.11.14", features = ["json", "blocking"] }
 serde = { version = "1.0.162", features = ["derive"] }
 serde_json = "1.0"
+
+
+[package.metadata.docs.rs]
+all-features = true
