--- a/fyyd-types/Cargo.toml
+++ b/fyyd-types/Cargo.toml
@@ -15,3 +15,6 @@ homepage.workspace = true
 [dependencies]
 serde = { version = "1.0.162", features = ["derive"] }
 serde_json = "1.0"
+
+[package.metadata.docs.rs]
+all-features = true
