feat: add examples for fyyd-api

--- a/fyyd-types/Cargo.toml
+++ b/fyyd-types/Cargo.toml
@@ -18,3 +18,5 @@ serde_json = "1.0"
 
 [package.metadata.docs.rs]
 all-features = true
+# see https://doc.rust-lang.org/nightly/rustdoc/scraped-examples.html
+cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
