--- a/fyyd-api/Cargo.toml
+++ b/fyyd-api/Cargo.toml
@@ -20,6 +20,10 @@ reqwest = { version = "0.11.14", features = ["json", "blocking"] }
 serde = { version = "1.0.162", features = ["derive"] }
 serde_json = "1.0"
 
+[dev-dependencies]
+tokio = { version = "1.28.2", features = ["full"] }
 
 [package.metadata.docs.rs]
 all-features = true
+# see https://doc.rust-lang.org/nightly/rustdoc/scraped-examples.html
+cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
