--- a/fyyd-api/Cargo.toml
+++ b/fyyd-api/Cargo.toml
@@ -19,6 +19,7 @@ fyyd-types = { path = "../fyyd-types" }
 reqwest = { version = "0.11.14", features = ["json", "blocking"] }
 serde = { version = "1.0.162", features = ["derive"] }
 serde_json = "1.0"
+thiserror = "1.0.43"
 
 [dev-dependencies]
 tokio = { version = "1.28.2", features = ["full"] }
